Adding mechanics of naive bayes

--- a/main.ipynb
+++ b/main.ipynb
@@ -130,10 +130,157 @@
     "\n",
     "Answer: $$P(U|H) = \\frac{P(H|U)P(U)}{P(H)} = \\frac{P(H|U)P(U)}{P(H|U)P(U) + P(H|F)P(F)} = \\frac{0.9*0.5}{0.9*0.5+0.5*0.5} = 0.64$$\n",
     "\n",
-    "#### The mecanics of Naive Bayes"
+    "#### The mecanics of Naive Bayes\n",
+    "\n",
+    "Consider:\n",
+    "\n",
+    "Let $k \\in \\{1,2,...,K\\}$ denote classes, the probability that a sample belong to class $k$ given observed $x$ is: \n",
+    "\n",
+    "$$P(y_k|x) = \\frac{P(x|y_k)P(y_k)}{P(x)}$$\n",
+    "\n",
+    "The names given for the components of the equation above are:\n",
+    "\n",
+    "- **Prior**: $P(y_k)$ - How classes are distributed, without any knowledge of features;\n",
+    "\n",
+    "- **Posterior**: $P(y_k|x)$ - Incorporates knowledge from observation;\n",
+    "\n",
+    "- **Likelihood** - P(x|y_k) - The distribution of n features given that the sample belong to class $y_k$. \n",
+    "Likelihood ends up being very hard to calculate when there are a large number of features, since this become a large joint distribution.\n",
+    "To circumvent this issue, Naive Bayes assumes feature independence, which allow us to write:\n",
+    "\n",
+    "$$P(x|y_k) = P(x_1|y_k)*P(x_2|y_k)*...*P(x_n|y_k)$$\n",
+    "\n",
+    "The denominator of our bayes formula, $P(x)$ (called **evidence**) depends on overall distribution of fetures, meaning that it acts a constant, \n",
+    "and so our posterior is proportional to:\n",
+    "\n",
+    "$$ P(y_k|x) \\propto P(x|y_k)P(y_k) = P(x_1|y_k)*P(x_2|y_k)*...*P(x_n|y_k) $$\n",
+    "\n",
+    "Note that it is possible that, for a given sample, a given feature, say $n'$ presents: $P(x_{n'}|y_k) = 0$, which would cause the likelihood to be zero, \n",
+    "and so an unknown likelihood. To avoid that, **Laplace Smoothing** is used:\n",
+    "\n",
+    "$$ P(x_{n'}|y_k) = \\frac{N_{x_{n'}|y_k} + \\alpha}{N_{y_k}+ \\alpha d}$$\n",
+    "\n",
+    "Where $N_{x_{n'}|y_k}$ is how many times $x_{n'}$ occured given that $y_k$ was observed, $N_{y_k}$ how many times $y_k$ wa observed, $\\alpha>0$ is the smoothing parameter ($\\alpha=0$ means no \n",
+    "smoothing, many times this is set to 1) and $d$ in the binary case is 2 (because there are two possible values).\n",
+    "\n",
+    "Knowing the likelihoods and given some prior, one can calculate the posteriors. Using the fact that the sum of posteriors for a given $x$ is 1, the probaility that\n",
+    "$y_k$ is observed given $x$ is found. \n"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "### Implementing Naive Bayes"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# Building a toy dataset, which tries to discover if the user likes the target movie based on how she likes other three movies (like is YES or NO)\n",
+    "X_train = np.array([\n",
+    "    [0, 1, 1],\n",
+    "    [0, 0, 1],\n",
+    "    [0, 0, 0],\n",
+    "    [1, 1, 0]])\n",
+    "Y_train = ['Y', 'N', 'Y', 'Y']\n",
+    "X_test = np.array([[1, 1, 0]])    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group data by label ('Y' and 'N') recording their indices (where they show up) by classes\n",
+    "\n",
+    "def get_label_indices(labels):\n",
+    "    \"\"\"\n",
+    "    Group samples based on their labels and return indices\n",
+    "    @param labels: list of labels\n",
+    "    @return: dict, {class1: [indices], class2: [indices]}\n",
+    "    \"\"\"\n",
+    "    from collections import defaultdict\n",
+    "    label_indices = defaultdict(list)\n",
+    "    for index, label in enumerate(labels):\n",
+    "        #print('index:',index)\n",
+    "        #print('label', label)\n",
+    "        label_indices[label].append(index)\n",
+    "    return label_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "label_indices:\n defaultdict(<class 'list'>, {'Y': [0, 2, 3], 'N': [1]})\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_indices = get_label_indices(Y_train)\n",
+    "print('label_indices:\\n', label_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_prior(label_indices):\n",
+    "    \"\"\"\n",
+    "    Compute prior based on training examples\n",
+    "    @param label_indices: grouped sample indices by class\n",
+    "    @return: dictionary, with class label as key, corresponding prior\n",
+    "             as the value\n",
+    "    \"\"\"\n",
+    "    # define prior as an object that can be referred by label\n",
+    "    #  get the length of indices inside label_indices items\n",
+    "    prior = {label: len(indices) for label, indices in label_indices.items()}\n",
+    "    total_count = sum(prior.values())\n",
+    "    for label in prior:\n",
+    "        prior[label]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "dict_items([('Y', [0, 2, 3]), ('N', [1])])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "label_indices.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
