--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "1) Unsupervised Learning: Data used for learning has indicative signals but no description. Ex: Anomalies detection;\n",
     "\n",
-    "2) Supervise Learning: Goal is to find a function mapping inputs to output, so in this sense data comes with description, targets or desired output. Ex: Sales forecasting;\n",
+    "2) Supervised Learning: Goal is to find a function mapping inputs to output, so in this sense data comes with description, targets or desired output. Ex: Sales forecasting;\n",
     "\n",
     "3) Reinforcement Learning: System can adapt to certain dynamic conditions with data providing feedbacks. There is a goal in the end and the system understands its perfomance, adjusting accordingly. Ex: Self-driven cars;\n"
    ]
@@ -34,7 +34,7 @@
     "\n",
     "**Bias**: \n",
     "\n",
-    "-> Error from incorrect assumptions iin learning algorithm:\n",
+    "-> Error from incorrect assumptions in learning algorithm:\n",
     "\n",
     "\\begin{align}\n",
     "Bias[ \\hat y ] = E[\\hat y - y ]\n",
@@ -59,11 +59,11 @@
     "\n",
     "**Overfitting**: The model is fitting the training set extremely well, but it is not good for predictions, in this sense, it does not have \"external validity\".\n",
     "    \n",
-    "- Its bias is low, but variance is high, since preadictions tend to have large variability;\n",
+    "- Its bias is low, but variance is high, since predictions tend to have large variability;\n",
     "    \n",
     "**Underfitting**: The model perfoms badly in training and test sets.\n",
     "\n",
-    "- Its bias is high, variance potentially low (in case our model is extremely simple, think about a a straight horizontal line as prediction);\n",
+    "- Its bias is high, variance potentially low (in case our model is extremely simple, think about a straight horizontal line as prediction);\n",
     "    \n",
     "**Bias-variance trade-off**\n",
     "\n",
@@ -126,7 +126,7 @@
     "\n",
     "$$P(A|B) = \\frac{P(B|A)P(A)}{P(B)}$$\n",
     "\n",
-    "E.g. If I have a unfair coin (U) and a fair one (F), such that in the first one the probability of head (P(H|U)=90%), so given that we got head, what it the probability that an unfair coin was picked?\n",
+    "E.g. If I have a unfair coin (U) and a fair one (F), such that in the first one the probability of head is 90% (P(H|U)=90%). Given that we got head, what it the probability that an unfair coin was picked?\n",
     "\n",
     "Answer: $$P(U|H) = \\frac{P(H|U)P(U)}{P(H)} = \\frac{P(H|U)P(U)}{P(H|U)P(U) + P(H|F)P(F)} = \\frac{0.9*0.5}{0.9*0.5+0.5*0.5} = 0.64$$\n",
     "\n",
@@ -144,13 +144,13 @@
     "\n",
     "- **Posterior**: $P(y_k|x)$ - Incorporates knowledge from observation;\n",
     "\n",
-    "- **Likelihood** - P(x|y_k) - The distribution of n features given that the sample belong to class $y_k$. \n",
+    "- **Likelihood** - $P(x|y_k)$ - The distribution of n features given that the sample belong to class $y_k$. \n",
     "Likelihood ends up being very hard to calculate when there are a large number of features, since this become a large joint distribution.\n",
     "To circumvent this issue, Naive Bayes assumes feature independence, which allow us to write:\n",
     "\n",
     "$$P(x|y_k) = P(x_1|y_k)*P(x_2|y_k)*...*P(x_n|y_k)$$\n",
     "\n",
-    "The denominator of our bayes formula, $P(x)$ (called **evidence**) depends on overall distribution of fetures, meaning that it acts a constant, \n",
+    "The denominator of our bayes formula, $P(x)$ (called **evidence**) depends on overall distribution of features, meaning that it acts a constant, \n",
     "and so our posterior is proportional to:\n",
     "\n",
     "$$ P(y_k|x) \\propto P(x|y_k)P(y_k) = P(x_1|y_k)*P(x_2|y_k)*...*P(x_n|y_k) $$\n",
@@ -160,7 +160,7 @@
     "\n",
     "$$ P(x_{n'}|y_k) = \\frac{N_{x_{n'}|y_k} + \\alpha}{N_{y_k}+ \\alpha d}$$\n",
     "\n",
-    "Where $N_{x_{n'}|y_k}$ is how many times $x_{n'}$ occured given that $y_k$ was observed, $N_{y_k}$ how many times $y_k$ wa observed, $\\alpha>0$ is the smoothing parameter ($\\alpha=0$ means no \n",
+    "Where $N_{x_{n'}|y_k}$ is how many times $x_{n'}$ occured given that $y_k$ was observed, $N_{y_k}$ how many times $y_k$ was observed, $\\alpha>0$ is the smoothing parameter ($\\alpha=0$ means no \n",
     "smoothing, many times this is set to 1) and $d$ in the binary case is 2 (because there are two possible values).\n",
     "\n",
     "Knowing the likelihoods and given some prior, one can calculate the posteriors. Using the fact that the sum of posteriors for a given $x$ is 1, the probaility that\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,35 +252,265 @@
     "    prior = {label: len(indices) for label, indices in label_indices.items()}\n",
     "    total_count = sum(prior.values())\n",
     "    for label in prior:\n",
-    "        prior[label]"
+    "        prior[label] /= total_count\n",
+    "    return prior"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "dict_items([('Y', [0, 2, 3]), ('N', [1])])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 17
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "index: [0, 2, 3]\nlabel Y\nindex: [1]\nlabel N\nPrior: {'Y': 0.75, 'N': 0.25}\n"
+     ]
     }
    ],
    "source": [
-    "label_indices.items()"
+    "for label, indices in label_indices.items(): \n",
+    "    print('index:',indices)\n",
+    "    print('label', label)\n",
+    "\n",
+    "prior = get_prior(label_indices)\n",
+    "print('Prior:', prior)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_likelihood(features,label_indices,smoothing = 0):\n",
+    "    \"\"\"\n",
+    "    Compute likelihood based on training samples, using \n",
+    "            Laplace approximation\n",
+    "    @param features: Matrix of features\n",
+    "    @param label_indices: Grouped sample indices by class\n",
+    "    @param smoothing: integer, additive smoothing parameter\n",
+    "    @return: dictionary, with class as keym corresponding \n",
+    "             conditional probability P(feature|class) vector \n",
+    "             as value\n",
+    "    \"\"\"\n",
+    "    likelihood = {}\n",
+    "    for label, indices in label_indices.items():\n",
+    "\n",
+    "        likelihood[label] = features[indices, :].sum(axis=0) + smoothing\n",
+    "\n",
+    "        total_count = len(indices)\n",
+    "\n",
+    "        likelihood[label] = likelihood[label]/(total_count + 2 * smoothing)\n",
+    "        \n",
+    "    return likelihood"
+   ]
+  },
+  {
+   "source": [
+    "# Setting smoothing = 1\n",
+    "smoothing = 1\n",
+    "likelihood = get_likelihood(X_train, label_indices, smoothing)\n",
+    "print('Likelihood:\\n', likelihood)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 35,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Likelihood:\n {'Y': array([0.4, 0.6, 0.4]), 'N': array([0.33333333, 0.33333333, 0.66666667])}\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_posterior(X, prior, likelihood):\n",
+    "    \"\"\"\n",
+    "    Compute posteruor of testing samples, based on prior and likelihood\n",
+    "    @param X: testing samples\n",
+    "    @param prior: dictionary, with class label as key,\n",
+    "                  corresponding prior as the value\n",
+    "    @param likelihood: dictionary, with class label as key, \n",
+    "                       corresponding conditional value as vector value\n",
+    "    @return: dictionary, with class label as key, posterior as value\n",
+    "    \"\"\"\n",
+    "    posteriors = []\n",
+    "    for x in X:\n",
+    "        # posterior is proportional to prior * likelihood\n",
+    "        posterior = prior.copy()\n",
+    "        for label, likelihood_label in likelihood.items():\n",
+    "            for index, bool_value in enumerate (x):\n",
+    "                posterior[label] *= likelihood_label[index] if bool_value else (1 - likelihood_label[index])\n",
+    "        # normalize so that all sums up to 1\n",
+    "        sum_posterior = sum(posterior.values())\n",
+    "        for label in posterior:\n",
+    "            if posterior[label] == float('inf'):\n",
+    "                posterior[label] = 1.0\n",
+    "            else:\n",
+    "                posterior[label] /= sum_posterior\n",
+    "        posteriors.append(posterior.copy())\n",
+    "    return posteriors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Posterior:\n [{'Y': 0.9210360075805433, 'N': 0.07896399241945673}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# From our example\n",
+    "posterior = get_posterior(X_test,prior,likelihood)\n",
+    "print('Posterior:\\n', posterior)"
+   ]
+  },
+  {
+   "source": [
+    "Observe that everything we have done above is what Naive Bayes does and we have done it from the scratch.\n",
+    "\n",
+    "Another possibility is to use *scikit-learn*"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Implementing Naive Bayes with scikit-learn\n",
+    "\n",
+    "- We are going to use BernoulliNB module from scikit-learn\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import BernoulliNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[scikit-learn] Predicted probabilities:\n [[0.07896399 0.92103601]]\n[scikit-learn] Prediction: ['Y']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the model (alpha is the smoothing factor,\n",
+    "#   fit_prior = True means prior learned from the training set)\n",
+    "clf = BernoulliNB(alpha = 1.0, fit_prior=True)\n",
+    "\n",
+    "# Train the classifier\n",
+    "clf.fit(X_train, Y_train)\n",
+    "\n",
+    "# Predict probability results\n",
+    "pred_prob = clf.predict_proba(X_test)\n",
+    "print('[scikit-learn] Predicted probabilities:\\n', pred_prob)\n",
+    "\n",
+    "# Or you can also get directly the predicted class by the method\n",
+    "pred = clf.predict(X_test)\n",
+    "print('[scikit-learn] Prediction:', pred)"
+   ]
+  },
+  {
+   "source": [
+    "## Evaluating Classification Performance\n",
+    "\n",
+    "To get more insights in the results, one can look not only to accuracy, but also to:\n",
+    "\n",
+    "1) **Confusion Matrix** (confusion_matrix from sklearn.metrics)\n",
+    "\n",
+    "\n",
+    "|       |          | Predicted | Predicted|\n",
+    "|-------|----------|:---------:|:--------:|\n",
+    "|       |          | Negative  | Positive |\n",
+    "|**Actual**| Negative |    TN     |    FP    |\n",
+    "|**Actual**| Positive |    FN     |    TP    |\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "    - TN: True Negative\n",
+    "    \n",
+    "    - FP: False Positive\n",
+    "\n",
+    "    - FN: False Negative\n",
+    "\n",
+    "    - TP: True Positive\n",
+    "\n",
+    "1.1) Precision: $\\frac{TP}{TP + FP}$ - Fraction of positive cells measured correctly;\n",
+    "\n",
+    "1.2) Recall (True positive rate): $\\frac{TP}{TP + FN}$ - Fraction of positive cells correctly identified;\n",
+    "\n",
+    "1.3) F1 score (harmonic mean): $f_1 = 2 * \\frac{precision * recall}{precision + recall}$\n",
+    "\n",
+    "\n",
+    "These measures can be obtained using scikit-learn by:\n",
+    "\n",
+    "`sklearn.metrics import precision_score, recall_score, f1_score`\n",
+    "\n",
+    "or a summarization of all is given by:\n",
+    "\n",
+    "`from sklearn.metrics import classification_report`\n",
+    "\n",
+    "\n",
+    "\n",
+    "2) Area under the curve (AUC) of the receiver operating characteristic (ROC):\n",
+    "\n",
+    "The distribution of True Positive and True Negative may overlap, if in some regions they do, then AUC is smaller than one. \n",
+    "The closer the AUC is to one, the model is perfectly able to distinguish between positive class and negative class. \n",
+    "\n",
+    "https://towardsdatascience.com/understanding-auc-roc-curve-68b2303cc9c5\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Tuning models with cross-validation\n",
+    "\n",
+    "We usually apply K-fold cross-validation. The idea of K-fold cross-validation is to divide the original dataset into *k* equal-sized subsets, which are retained as a testing set, the remaining k - 1 subsets are used to train model. Then the average performance across all k trials is calculated to generate overall result.\n",
+    "\n",
+    "Also, cross-validation is used to adjust hyperparameters, boosting learning perfomance and reducing overfitting.\n",
+    "\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Chapter 3: Recognizing Faces with Support Vector Machine\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
