--- a/main.ipynb
+++ b/main.ipynb
@@ -507,7 +507,384 @@
   },
   {
    "source": [
-    "## Chapter 3: Recognizing Faces with Support Vector Machine\n"
+    "## Chapter 3: Recognizing Faces with Support Vector Machine (SVM)\n",
+    "\n",
+    "## Finding Separating Boundary with SVM\n",
+    "\n",
+    "- The whole idea here is to find an optimal hyperplane in order to divide an N-dimensional space of features;\n",
+    "\n",
+    "- The hyprplane has the characteristic of being in (N-1)-dimensional space, such that if we talk about a 3D space, the hyperplane will be a 2D plane, if we are in a 2D space, the hyperplane will be a line;\n",
+    "\n",
+    "- Thus the idea is to find the hyperplane that maximizes the distance between the nearest features (points) in the N-dimensional space to the hyperplane. The nearest points delivering this maximization are caled **support vectors**.\n",
+    "\n",
+    "\n",
+    "## Scenario 1: Identifying a separating hyperplane\n",
+    "\n",
+    "*Definition*: Let $w$ be a n-dimensional vector and $b$ an intercept. A separating hyperplane is such that:\n",
+    "\n",
+    "- For any data point x from one class, it satisfies $wx + b > 0$\n",
+    "\n",
+    "- For any data point x from another class, it satisfies $wx + b < 0$\n",
+    "\n",
+    "\n",
+    "## Scenario 2: Determining the optimal hyperplane\n",
+    "\n",
+    "*Definitions*: \n",
+    "\n",
+    "- a) The nearest point(s) on the positive side of the hyperplane can constitute parallel hyperplane, this is called **positive hyperplane**. Analogously, in the negative side there is the **negative hyperplane**. The perpendicular distance between the negative and positive hyperplane is called **margin** and a **decision** hyperplane is optimal (or maximum-margin) if maximizes this distance. \n",
+    "\n",
+    "- b) Mathematically:\n",
+    "\n",
+    "    - **positive hyperplane**: $w x^{(p)} + b = 1$;\n",
+    "\n",
+    "    - **negative hyperplane**:: $w x^{(n)} + b = -1$;\n",
+    "\n",
+    "    - Where $x^{(p)}$ is a point in the positive hyperplane and $x^{(n)}%$ in the negative hyperplane;\n",
+    "\n",
+    "    - Let $i \\in \\{p,n\\}$. The distance between a point and the decision hyperplane is given by:\n",
+    "\n",
+    "    $$ \\frac{w x^{(i)} + b}{||w||} = \\frac{1}{||w||} $$\n",
+    "\n",
+    "    - Margin is then: $\\frac{w x^{(p)} + b}{||w||} +\\frac{w x^{(n)} + b}{||w||} = \\frac{2}{||w||}$;\n",
+    "\n",
+    "    - Thus we need to minimize $||w||$ to maximize margin.\n",
+    "\n",
+    "**Optimization problem** - Let $i \\in \\{p,n\\}$:\n",
+    "\n",
+    "- Minimze $||w||$\n",
+    "\n",
+    "- Subject to $y^{(i)}(w x^{(i)} + b) \\geq 0$ for the training set $\\{(x^{(1)},y^{(1)}), (x^{(2)},y^{(2)}),...,(x^{(m)},y^{(m)})\\}$;\n",
+    "    \n",
+    "\n",
+    "After optimization,we can use the model as classifier, such that if:\n",
+    "\n",
+    "- $ \\boldsymbol{w} \\boldsymbol{x}' + b > 0 \\rightarrow 1$;\n",
+    "\n",
+    "- $ \\boldsymbol{w} \\boldsymbol{x}' + b < 0 \\rightarrow -1$;\n",
+    "\n",
+    "- $||w x' + b||$ is the confidence of prediction, since it states the distance between the hyperplane and the specific point;\n",
+    "\n",
+    "\n",
+    "## Scenario 3: Handling outliers\n",
+    "\n",
+    "- Often we cannot separate all the points with a hyperplane, some of them end up in the \"other side\"\n",
+    "\n",
+    "*Definitions*: \n",
+    "\n",
+    "- **misclassification error (hinge loss)**: the misclassification measure for a point $i$ is given by:\n",
+    "\n",
+    "    - i) If misclassified: $\\zeta^{(i)} = 1 - y^{(i)}(w x^{(i)} + b)$;\n",
+    "\n",
+    "    - ii) Otherwise: $\\zeta^{(i)} = 0$;\n",
+    "\n",
+    "\n",
+    "**Optimization problem** - Let $i \\in \\{p,n\\}$:\n",
+    "\n",
+    "- Minimze $||w|| + C \\frac{\\sum_{i=1}^m \\zeta^{(i)}}{m}$ \n",
+    "\n",
+    "- Subject to $y^{(i)}(w x^{(i)} + b) \\geq 0$ for the training set $\\{(x^{(1)},y^{(1)}), (x^{(2)},y^{(2)}),...,(x^{(m)},y^{(m)})\\}$;\n",
+    "\n",
+    "- Where $C$ is the hyperparameter defining the penalty for misclassification. If high, it will penalize it a lot, making model prone to overfiting, whereas if low, it allows more misclassified points and  possibly lead to low variance but high bias; \n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Implementing SVM\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# Loading dataset and performing some basic analysis\n",
+    "\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "cancer_data = load_breast_cancer()\n",
+    "X = cancer_data.data\n",
+    "Y = cancer_data.target\n",
+    "print('Input data size:', X.shape)\n",
+    "print('Onput data size:', Y.shape)\n",
+    "print('Label names:', cancer_data.target_names)\n",
+    "n_pos = (Y == 1).sum()\n",
+    "n_neg = (Y == 0).sum()\n",
+    "print(f' {n_pos} positve samples and {n_neg} negative samples.') # Serves as imbalance check"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 8,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Input data size: (569, 30)\nOnput data size: (569,)\nLabel names: ['malignant' 'benign']\n 357 positve samples and 212 negative samples.\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Spliting training and testing sets\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply SVM classifier\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "clf = SVC(kernel='linear', C=1.0, random_state = 42)\n",
+    "# Kernel: will be explained latter on\n",
+    "# C: Penalty parameter (default = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "SVC(kernel='linear', random_state=42)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "# Fit the model to training set\n",
+    "\n",
+    "clf.fit(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The accuracy is: 95.8%\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = clf.score(X_test, Y_test)\n",
+    "print(f'The accuracy is: {accuracy*100:.1f}%')"
+   ]
+  },
+  {
+   "source": [
+    "## Scenario 4: Dealing with more than two classes\n",
+    "\n",
+    "Two typical approaches:\n",
+    "\n",
+    "1) **one-vc-rest** (or **one-vs-all**)\n",
+    "\n",
+    "- For a K-class problem run K different binary SVM classifiers, such that if data falls in $k^{th}$ class it assumes one and zero otherwise.\n",
+    "\n",
+    "- Pick the class delivering higher confidence (larger value of $w_k x' + b_i$):\n",
+    "\n",
+    "$$y' = argmax_i(w_i x' + b_i)$$\n",
+    "\n",
+    "2) **one-vs-one**\n",
+    "\n",
+    "- Pairwise comparisons: Pick two classes (e.g $i$ and $j$) and trains a model on observations from $i$ (as the \"positive case\").\n",
+    "Assign class to a new sample. Repeat this process for all paiwise combinations, which results in $\\frac{K(K-1)}{2} different classifiers.\n",
+    "\n",
+    "- The class that gets the most votes looking to all pairwise classifications is the winner. \n",
+    "\n",
+    "**Performance**\n",
+    "\n",
+    "- Generally speaking both have similar accuracy.\n",
+    "\n",
+    "- one-vs-one tends to be more memory efficient because it trains many models on smaller subset of data.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# Get data\n",
+    "\n",
+    "from sklearn.datasets import load_wine\n",
+    "wine_data = load_wine()\n",
+    "X = wine_data.data\n",
+    "Y = wine_data.target\n",
+    "print('Input data size :', X.shape)\n",
+    "print('Output data size :', Y.shape)\n",
+    "print('Label names:', wine_data.target_names)\n",
+    "n_class0 = (Y == 0).sum()\n",
+    "n_class1 = (Y == 1).sum()\n",
+    "n_class2 = (Y == 2).sum()\n",
+    "print(f'{n_class0} class0 samples,\\n{n_class1} class1 samples,\\n{n_class2} class2 samples.')"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 25,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Input data size : (178, 13)\nOutput data size : (178,)\nLabel names: ['class_0' 'class_1' 'class_2']\n59 class0 samples,\n71 class1 samples,\n48 class2 samples.\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split training and test set\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y,\n",
+    "random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "SVC(kernel='linear', random_state=42)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "# Apply SVM classifier to data, initializing SVC model and iftting against training set\n",
+    "\n",
+    "clf = SVC(kernel='linear', C=1.0, random_state=42)\n",
+    "clf.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The accuracy is: 97.8%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make predictions on test set\n",
+    "\n",
+    "accuracy = clf.score(X_test, Y_test)\n",
+    "print(f'The accuracy is: {accuracy*100:.1f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "              precision    recall  f1-score   support\n\n           0       1.00      1.00      1.00        15\n           1       1.00      0.94      0.97        18\n           2       0.92      1.00      0.96        12\n\n    accuracy                           0.98        45\n   macro avg       0.97      0.98      0.98        45\nweighted avg       0.98      0.98      0.98        45\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check perfornabce for individual classes\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "pred = clf.predict(X_test)\n",
+    "print(classification_report(Y_test, pred))"
+   ]
+  },
+  {
+   "source": [
+    "## Scenario 5: Solving linearly non-separable problems with kernels\n",
+    "\n",
+    "- There are some classification problems that cannot be solved with linear techniques.\n",
+    "\n",
+    "- For these cases **SVM with kernels** were invented, they convert the original feature $x^{(i)}$ \n",
+    "to a higher dimensional feature space using a function $\\Phi$, such that the transformed dataset $\\Phi(x^{(i)})$\n",
+    "is linearly separable. \n",
+    "\n",
+    "- New observations then become $(\\Phi(x^{(i)}),y^{(i)})$.\n",
+    "\n",
+    "- Along the process of SVM quadratic optimization, the features are involved in the form of pairwise\n",
+    "dot product $x^{(i)} \\cdot x^{(j)}$. It would be more efficient to implement the $\\Phi$ tranformation \n",
+    "first on the two low dimensional vectors than on the product itself. A function that satisfies it is\n",
+    "called **kernel function**:\n",
+    "\n",
+    "$$K(x^{(i)},x^{(j)}) = \\Phi(x^{(i)}) \\cdot \\Phi(x^{(j)})$$\n",
+    "\n",
+    "Several kernels could be used:\n",
+    "\n",
+    "(i) **Radial Basis Function (RBF)**\n",
+    "\n",
+    "$$ K(x^{(i)},x^{(j)}) = exp \\left(-\\frac{||x^{(i)} - x^{(j)}||}{2\\sigma^2} \\right) =  exp \\left(-\\gamma ||x^{(i)} - x^{(j)}|| \\right)$$\n",
+    "\n",
+    "Where $\\gamma = \\frac{1}{2\\sigma^2}$.\n",
+    "\n",
+    "(ii) **Polynomial** (of degree d)\n",
+    "\n",
+    "$$ K(x^{(i)},x^{(j)}) = \\left( x^{(i)} \\cdot x^{(j)} + \\gamma \\right)^d $$\n",
+    "\n",
+    "(iii) **Sigmoid** \n",
+    "\n",
+    "$$ K(x^{(i)},x^{(j)}) = tanh \\left( x^{(i)} \\cdot x^{(j)} + \\gamma \\right) $$\n",
+    "\n",
+    "- The parameter $\\gamma$ is the **kernel coefficient** such that a large one (small $\\sigma$)\n",
+    "means low variance allowed, representing exact fit on training set which may lead to overfitting. \n",
+    "On the other hand, a small $\\gamma$ may lead to loose fit on training set, possibly causing underfitting. \n",
+    "\n",
+    "- Generally speaking, RBF kernel is preferrable over the others since there is no other parameter to tweak \n",
+    "(as $d$ in polynomial) and sigmoid tends to perform similar to RBF (under certain parameters).\n",
+    "\n",
+    "### Choosing between linear and RBF kernels\n",
+    "\n",
+    "Three scenarios where linear kernel is favored over RBF:\n",
+    "\n",
+    "**Scenario 1**: Number of features and instances are high (over than 104 or 105). \n",
+    "The dimension of feature space is too high and RBF transformation will not provide \n",
+    "performance improvement but will increase computational expense. \n",
+    "\n",
+    "**Scenario 2**: Number of features in too large when compared to number of training samples.\n",
+    "RBF kernel is more prone to overfitting.\n",
+    "\n",
+    "**Scenario 3**: Number of instances in too large when compared to number of features.\n",
+    "RBF kernel for low dimension, generally boost performance, mapping it to higher-dimensional\n",
+    "space. Due to training complexity, it becomes inefficient in a training set with more thant\n",
+    "106 or 107 samples. \n",
+    "\n",
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -529,7 +906,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
